package under_score;

message Test1 {
  optional string test_field = 1;
  
  message Test1Child {
    optional string test_child_field = 1;
  }
};
